Manage Item Table

--- a/ecci.inv.system/ecci.inv.system.csproj
+++ b/ecci.inv.system/ecci.inv.system.csproj
@@ -6738,6 +6738,8 @@
     <Content Include="Images\ProductImages\7\Peter England Men Blue Linen Slim Fit Formal Shirt04" />
     <Content Include="Images\ProductImages\7\Peter England Men Blue Linen Slim Fit Formal Shirt05" />
     <Content Include="Products.aspx" />
+    <Content Include="purchasing\manageitems.aspx" />
+    <Content Include="purchasing\WebService\ManageItemService.asmx" />
     <Content Include="purchasing\WebService\PurchaseOrderService.asmx" />
     <Content Include="purchasing\index.aspx" />
     <Content Include="purchasing\supplier.aspx" />
@@ -7482,7 +7484,19 @@
     <Compile Include="Products.aspx.designer.cs">
       <DependentUpon>Products.aspx</DependentUpon>
     </Compile>
+    <Compile Include="purchasing\CS\ManageItem.cs" />
     <Compile Include="purchasing\CS\PurchaseOrder.cs" />
+    <Compile Include="purchasing\manageitems.aspx.cs">
+      <DependentUpon>manageitems.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="purchasing\manageitems.aspx.designer.cs">
+      <DependentUpon>manageitems.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="purchasing\WebService\ManageItemService.asmx.cs">
+      <DependentUpon>ManageItemService.asmx</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="purchasing\WebService\PurchaseOrderService.asmx.cs">
       <DependentUpon>PurchaseOrderService.asmx</DependentUpon>
       <SubType>Component</SubType>
