supplier table done

--- a/ecci.inv.system/ecci.inv.system.csproj
+++ b/ecci.inv.system/ecci.inv.system.csproj
@@ -6739,7 +6739,9 @@
     <Content Include="Images\ProductImages\7\Peter England Men Blue Linen Slim Fit Formal Shirt05" />
     <Content Include="Products.aspx" />
     <Content Include="purchasing\manageitems.aspx" />
+    <Content Include="purchasing\managesuppliers.aspx" />
     <Content Include="purchasing\WebService\ManageItemService.asmx" />
+    <Content Include="purchasing\WebService\ManageSupplierService.asmx" />
     <Content Include="purchasing\WebService\PurchaseOrderService.asmx" />
     <Content Include="purchasing\index.aspx" />
     <Content Include="purchasing\supplier.aspx" />
@@ -7485,6 +7487,7 @@
       <DependentUpon>Products.aspx</DependentUpon>
     </Compile>
     <Compile Include="purchasing\CS\ManageItem.cs" />
+    <Compile Include="purchasing\CS\ManageSupplier.cs" />
     <Compile Include="purchasing\CS\PurchaseOrder.cs" />
     <Compile Include="purchasing\manageitems.aspx.cs">
       <DependentUpon>manageitems.aspx</DependentUpon>
@@ -7493,8 +7496,19 @@
     <Compile Include="purchasing\manageitems.aspx.designer.cs">
       <DependentUpon>manageitems.aspx</DependentUpon>
     </Compile>
+    <Compile Include="purchasing\managesuppliers.aspx.cs">
+      <DependentUpon>managesuppliers.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="purchasing\managesuppliers.aspx.designer.cs">
+      <DependentUpon>managesuppliers.aspx</DependentUpon>
+    </Compile>
     <Compile Include="purchasing\WebService\ManageItemService.asmx.cs">
       <DependentUpon>ManageItemService.asmx</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="purchasing\WebService\ManageSupplierService.asmx.cs">
+      <DependentUpon>ManageSupplierService.asmx</DependentUpon>
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="purchasing\WebService\PurchaseOrderService.asmx.cs">
