--- a/ecci.inv.system/Web.config
+++ b/ecci.inv.system/Web.config
@@ -35,6 +35,12 @@
     </compilers>
   </system.codedom>
   <system.webServer>
+    <httpProtocol>
+      <customHeaders>
+        <add name="Access-Control-Allow-Origin" value="*" />
+        <add name="Access-Control-Allow-Headers" value="Content-Type" />
+      </customHeaders>
+    </httpProtocol>
     <validation validateIntegratedModeConfiguration="false"/>
     <modules>
       <remove name="ApplicationInsightsWebTracking"/>
