--- a/ecci.inv.system/Web.config
+++ b/ecci.inv.system/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name ="getdatabase" connectionString ="Data Source=112.209.172.28;Initial Catalog=stock;Persist Security Info=True;User ID=sa;Password=p@ssw0rd;"
+    <add name="getdatabase"  connectionString="Data Source=112.209.172.28;Initial Catalog=stock;Persist Security Info=True;User ID=sa;Password=p@ssw0rd;"
          providerName="System.Data.SqlClient" />
   </connectionStrings>
   <!-- <connectionStrings>
@@ -48,4 +48,24 @@
         preCondition="managedHandler"/>
     </modules>
   </system.webServer>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="ManageItemServiceSoap" />
+        <binding name="ManageSupplierServiceSoap" />
+        <binding name="PurchaseOrderServiceSoap" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://112.209.172.28/purchasing/WebService/ManageItemService.asmx"
+        binding="basicHttpBinding" bindingConfiguration="ManageItemServiceSoap"
+        contract="ServiceReference1.ManageItemServiceSoap" name="ManageItemServiceSoap" />
+      <endpoint address="http://112.209.172.28/purchasing/WebService/ManageSupplierService.asmx"
+        binding="basicHttpBinding" bindingConfiguration="ManageSupplierServiceSoap"
+        contract="ServiceReference2.ManageSupplierServiceSoap" name="ManageSupplierServiceSoap" />
+      <endpoint address="http://112.209.172.28/purchasing/WebService/PurchaseOrderService.asmx"
+        binding="basicHttpBinding" bindingConfiguration="PurchaseOrderServiceSoap"
+        contract="ServiceReference3.PurchaseOrderServiceSoap" name="PurchaseOrderServiceSoap" />
+    </client>
+  </system.serviceModel>
 </configuration>
