Adding Httpget and HttpPost

--- a/ecci.inv.system/Web.config
+++ b/ecci.inv.system/Web.config
@@ -17,6 +17,12 @@
          providerName="System.Data.SqlClient" />
   </connectionStrings>-->
   <system.web>
+    <webServices>
+      <protocols>
+        <add name="HttpGet"/>
+        <add name="HttpPost"/>
+      </protocols>
+    </webServices>
     <compilation debug="false" targetFramework="4.5.2"/>
     <httpRuntime targetFramework="4.5.2"/>
     <httpModules>
