--- a/ecci.inv.system/ecci.inv.system.csproj
+++ b/ecci.inv.system/ecci.inv.system.csproj
@@ -7558,7 +7558,7 @@
     <Compile Include="purchasing\stock.aspx.designer.cs">
       <DependentUpon>stock.aspx</DependentUpon>
     </Compile>
-    <Compile Include="qualitycontrol\CS\PurchaseOrder.cs" />
+    <Compile Include="qualitycontrol\CS\OrderDelivery.cs" />
     <Compile Include="qualitycontrol\QualityControl.Master.cs">
       <DependentUpon>QualityControl.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
