--- a/ecci.inv.system/Web.config
+++ b/ecci.inv.system/Web.config
@@ -1,11 +1,11 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
   <connectionStrings>
-  <!--    <add name="getdatabase"  connectionString="Data Source=112.209.172.28;Initial Catalog=stock;Persist Security Info=True;User ID=sa;Password=p@ssw0rd;"
+    <!--    <add name="getdatabase"  connectionString="Data Source=112.209.172.28;Initial Catalog=stock;Persist Security Info=True;User ID=sa;Password=p@ssw0rd;"
          providerName="System.Data.SqlClient" />
   </connectionStrings>
  <connectionStrings>
@@ -13,8 +13,7 @@
          providerName="System.Data.SqlClient" />
   </connectionStrings>
   <connectionStrings>-->
-    <add name ="getdatabase" connectionString ="Data Source=JOHNREY-PC\SQLEXPRESS;Initial Catalog=stock;Persist Security Info=True;User ID=sa;Password=joanamahal029;"
-         providerName="System.Data.SqlClient" />
+    <add name="getdatabase" connectionString="Data Source=JOHNREY-PC\SQLEXPRESS;Initial Catalog=stock;Persist Security Info=True;User ID=sa;Password=joanamahal029;" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
     <webServices>
@@ -23,7 +22,7 @@
         <add name="HttpPost"/>
       </protocols>
     </webServices>
-    <compilation debug="false" targetFramework="4.5.2"/>
+    <compilation debug="true" targetFramework="4.5.2"/>
     <httpRuntime targetFramework="4.5.2"/>
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web"/>
@@ -32,26 +31,21 @@
   </system.web>
   <system.codedom>
     <compilers>
-      <compiler language="c#;cs;csharp" extension=".cs"
-        type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
-        warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701"/>
-      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb"
-        type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
-        warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
+      <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701"/>
+      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
   <system.webServer>
     <httpProtocol>
       <customHeaders>
-        <add name="Access-Control-Allow-Origin" value="*" />
-        <add name="Access-Control-Allow-Headers" value="Content-Type" />
+        <add name="Access-Control-Allow-Origin" value="*"/>
+        <add name="Access-Control-Allow-Headers" value="Content-Type"/>
       </customHeaders>
     </httpProtocol>
     <validation validateIntegratedModeConfiguration="false"/>
     <modules>
       <remove name="ApplicationInsightsWebTracking"/>
-      <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web"
-        preCondition="managedHandler"/>
+      <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler"/>
     </modules>
   </system.webServer>
 </configuration>
