--- a/ecci.inv.system/Web.config
+++ b/ecci.inv.system/Web.config
@@ -48,4 +48,25 @@
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler"/>
     </modules>
   </system.webServer>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="OrderDeliveryServiceSoap" />
+      </basicHttpBinding>
+      <customBinding>
+        <binding name="OrderDeliveryServiceSoap12">
+          <textMessageEncoding messageVersion="Soap12" />
+          <httpTransport />
+        </binding>
+      </customBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://localhost:2908/qualitycontrol/WebService/OrderDeliveryService.asmx"
+        binding="basicHttpBinding" bindingConfiguration="OrderDeliveryServiceSoap"
+        contract="DeliveryService.OrderDeliveryServiceSoap" name="OrderDeliveryServiceSoap" />
+      <endpoint address="http://localhost:2908/qualitycontrol/WebService/OrderDeliveryService.asmx"
+        binding="customBinding" bindingConfiguration="OrderDeliveryServiceSoap12"
+        contract="DeliveryService.OrderDeliveryServiceSoap" name="OrderDeliveryServiceSoap12" />
+    </client>
+  </system.serviceModel>
 </configuration>
