--- a/ecci.inv.system/ecci.inv.system.csproj
+++ b/ecci.inv.system/ecci.inv.system.csproj
@@ -6749,7 +6749,9 @@
     <Content Include="purchasing\supplier.aspx" />
     <Content Include="purchasing\items.aspx" />
     <Content Include="purchasing\stock.aspx" />
+    <Content Include="qualitycontrol\dispatching.aspx" />
     <Content Include="qualitycontrol\index.aspx" />
+    <Content Include="qualitycontrol\WebService\DispatchingDeliveryService.asmx" />
     <Content Include="qualitycontrol\WebService\OrderDeliveryService.asmx" />
     <Content Include="scripts\chosen.jquery.min.js" />
     <Content Include="scripts\getmdl-select.min.css" />
@@ -7566,7 +7568,15 @@
     <Compile Include="purchasing\stock.aspx.designer.cs">
       <DependentUpon>stock.aspx</DependentUpon>
     </Compile>
+    <Compile Include="qualitycontrol\CS\DispatchDelivery.cs" />
     <Compile Include="qualitycontrol\CS\OrderDelivery.cs" />
+    <Compile Include="qualitycontrol\dispatching.aspx.cs">
+      <DependentUpon>dispatching.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="qualitycontrol\dispatching.aspx.designer.cs">
+      <DependentUpon>dispatching.aspx</DependentUpon>
+    </Compile>
     <Compile Include="qualitycontrol\QualityControl.Master.cs">
       <DependentUpon>QualityControl.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -7580,6 +7590,10 @@
     </Compile>
     <Compile Include="qualitycontrol\index.aspx.designer.cs">
       <DependentUpon>index.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="qualitycontrol\WebService\DispatchingDeliveryService.asmx.cs">
+      <DependentUpon>DispatchingDeliveryService.asmx</DependentUpon>
+      <SubType>Component</SubType>
     </Compile>
     <Compile Include="qualitycontrol\WebService\OrderDeliveryService.asmx.cs">
       <DependentUpon>OrderDeliveryService.asmx</DependentUpon>
