warehouse db, raw fail db, Dispatch status

--- a/ecci.inv.system/Web.config
+++ b/ecci.inv.system/Web.config
@@ -53,9 +53,14 @@
     <bindings>
       <basicHttpBinding>
         <binding name="OrderDeliveryServiceSoap" />
+        <binding name="DispatchingDeliveryServiceSoap" />
       </basicHttpBinding>
       <customBinding>
         <binding name="OrderDeliveryServiceSoap12">
+          <textMessageEncoding messageVersion="Soap12" />
+          <httpTransport />
+        </binding>
+        <binding name="DispatchingDeliveryServiceSoap12">
           <textMessageEncoding messageVersion="Soap12" />
           <httpTransport />
         </binding>
@@ -68,6 +73,12 @@
       <endpoint address="http://localhost:2908/qualitycontrol/WebService/OrderDeliveryService.asmx"
         binding="customBinding" bindingConfiguration="OrderDeliveryServiceSoap12"
         contract="DeliveryService.OrderDeliveryServiceSoap" name="OrderDeliveryServiceSoap12" />
+      <endpoint address="http://localhost:2908/qualitycontrol/WebService/DispatchingDeliveryService.asmx"
+        binding="basicHttpBinding" bindingConfiguration="DispatchingDeliveryServiceSoap"
+        contract="DispatchService.DispatchingDeliveryServiceSoap" name="DispatchingDeliveryServiceSoap" />
+      <endpoint address="http://localhost:2908/qualitycontrol/WebService/DispatchingDeliveryService.asmx"
+        binding="customBinding" bindingConfiguration="DispatchingDeliveryServiceSoap12"
+        contract="DispatchService.DispatchingDeliveryServiceSoap" name="DispatchingDeliveryServiceSoap12" />
     </client>
   <!--<client>
     <endpoint address="http://112.209.172.28/qualitycontrol/WebService/OrderDeliveryService.asmx"
