--- a/ecci.inv.system/Web.config
+++ b/ecci.inv.system/Web.config
@@ -8,14 +8,14 @@
      <add key="CrystalImageCleaner-Age" value="120000" />
  </appSettings>
  <connectionStrings>
-    <add name="getdatabase" connectionString="Data Source=112.209.102.209;Initial Catalog=stock;Persist Security Info=True;User ID=sa;Password=p@ssw0rd;" providerName="System.Data.SqlClient"/>
+    <add name="getdatabase" connectionString="Data Source=triton.pemaustria.com;Initial Catalog=stock;Persist Security Info=True;User ID=sa;Password=p@ssw0rd;" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <!--<connectionStrings>
-    <add name="getdatabase"  connectionString="Data Source=112.209.102.209;Initial Catalog=stock_prod;Persist Security Info=True;User ID=sa;Password=p@ssw0rd;"
+    <add name="getdatabase"  connectionString="Data Source=triton.pemaustria.com;Initial Catalog=stock_prod;Persist Security Info=True;User ID=sa;Password=p@ssw0rd;"
          providerName="System.Data.SqlClient" />
   </connectionStrings>-->
   <!--<connectionStrings>
-    <add name ="getdatabase" connectionString ="Data Source=112.209.102.209;Initial Catalog=stock;Persist Security Info=True;User ID=sa;Password=p@ssw0rd;"
+    <add name ="getdatabase" connectionString ="Data Source=triton.pemaustria.com;Initial Catalog=stock;Persist Security Info=True;User ID=sa;Password=p@ssw0rd;"
          providerName="System.Data.SqlClient" />
   </connectionStrings>-->
   <!--<connectionStrings>
