--- a/ecci.inv.system/ecci.inv.system.csproj
+++ b/ecci.inv.system/ecci.inv.system.csproj
@@ -7485,6 +7485,7 @@
     <Content Include="superadmin\index.aspx" />
     <Content Include="superadmin\users.aspx" />
     <Content Include="warehouse\index.aspx" />
+    <Content Include="warehouse\WebService\RawMaterialsService.asmx" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -7708,6 +7709,7 @@
     <Compile Include="superadmin\users.aspx.designer.cs">
       <DependentUpon>users.aspx</DependentUpon>
     </Compile>
+    <Compile Include="warehouse\CS\RawMaterials.cs" />
     <Compile Include="warehouse\WareHouse.Master.cs">
       <DependentUpon>WareHouse.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -7721,6 +7723,10 @@
     </Compile>
     <Compile Include="warehouse\index.aspx.designer.cs">
       <DependentUpon>index.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="warehouse\WebService\RawMaterialsService.asmx.cs">
+      <DependentUpon>RawMaterialsService.asmx</DependentUpon>
+      <SubType>Component</SubType>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -7743,6 +7749,7 @@
       <LastGenOutput>purchaseorder.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
